--- a/ComLear. Decrease PZP.ipynb
+++ b/ComLear. Decrease PZP.ipynb
@@ -4,28 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Построение дерева для уменьшения ПЗП\n",
-    "\n",
-    "За основу взят код Жана. Но, немного перерабатываем.\n",
-    "В общем-то получилось, однако. При этом - в полномо объёме.\n",
-    "\n",
-    "Следует научится чить полученный результат"
+    "## Построение дерева "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Результат записан в test_02.png\n"
+     ]
     }
    ],
    "source": [
@@ -54,39 +46,31 @@
     "\n",
     "graph = pydotplus.graph_from_dot_data(dot_data)\n",
     "Image(graph.create_png())\n",
-    "#graph.write_pdf('test_02.pdf')\n",
+    "\n",
     "graph.write_png('test_02.png')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#for i in range(len(pred)) :\n",
-    "#    print( u\"%.2f %.2f\" % ( pred[i,0], pred[i,1]) )"
+    "#graph.write_pdf('test_02.pdf')\n",
+    "\n",
+    "print( u\"Результат записан в test_02.png\" )\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
