--- a/ComLear. Decrease PZP.ipynb
+++ b/ComLear. Decrease PZP.ipynb
@@ -9,19 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Результат записан в test_02.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#import numpy as numpy\n",
     "import pandas as pandas\n",
     "from sklearn import tree\n",
     "import pydotplus\n",
@@ -37,20 +28,17 @@
     "y_train = train_dt['MATCHED_FLG']\n",
     "\n",
     "\n",
-    "clf = tree.DecisionTreeClassifier( min_samples_leaf = 10000 )\n",
+    "clf = tree.DecisionTreeClassifier( min_samples_leaf = 5000 )\n",
     "clf.fit( X_train, y_train )\n",
     "pred = clf.predict_proba( X_train )\n",
     "\n",
-    "# dot_data = tree.export_graphviz( clf, out_file= 'test.dot', feature_names= features)\n",
     "dot_data = tree.export_graphviz( clf, out_file= None, feature_names= features)\n",
     "\n",
     "graph = pydotplus.graph_from_dot_data(dot_data)\n",
     "Image(graph.create_png())\n",
-    "\n",
     "graph.write_png('test_02.png')\n",
-    "#graph.write_pdf('test_02.pdf')\n",
-    "\n",
-    "print( u\"Результат записан в test_02.png\" )\n"
+    "Image('test_02.png')\n",
+    "\n"
    ]
   }
  ],
